--- a/src/components/ProductInfor/ProductInforCustom.css
+++ b/src/components/ProductInfor/ProductInforCustom.css
@@ -1,9 +1,8 @@
 .producInfor {
   display: flex;
-  width: 400px;
+  width: auto;
   flex-shrink: 0;
-  padding-top: 10px;
-  padding-top: 10px;
+  padding: 10px;
   margin-top: 5px;
 }
 
