--- a/src/components/SearchBoxComponent/SearchBoxComponent.module.css
+++ b/src/components/SearchBoxComponent/SearchBoxComponent.module.css
@@ -26,3 +26,6 @@
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--brown100)"><path d="M18.3 5.71a1 1 0 0 0-1.42 0L12 10.59 7.12 5.71a1 1 0 0 0-1.42 1.42L10.59 12l-4.89 4.88a1 1 0 0 0 1.42 1.42L12 13.41l4.88 4.89a1 1 0 0 0 1.42-1.42L13.41 12l4.89-4.88a1 1 0 0 0 0-1.41z"/></svg>')
     no-repeat center;
 }
+.search__wrapper{
+  display: flex;
+}
