--- a/src/pages/Admin/CRUDOrderStatus/OrderListPage/OrderListPage.css
+++ b/src/pages/Admin/CRUDOrderStatus/OrderListPage/OrderListPage.css
@@ -109,3 +109,50 @@ h2 {
 .delete-btn:hover {
   color: red;
 }
+
+.filter-order__status {
+  --button-width: 200px; /* Tùy chỉnh width */
+  --button-height: 50px; /* Tùy chỉnh height */
+  width: var(--button-width);
+  height: var(--button-height);
+  border-radius: 15px;
+  background-color: var(--white);
+  color: var(--brown100);
+  font-size: 1.8rem;
+  text-align: left; /* Đảm bảo text căn lề trái */
+  box-shadow: 0px 0px 4px 0px var(--shadow);
+  transition: all 0.3s ease;
+}
+
+.filter-order__status .dropdown-toggle {
+  background: transparent;
+  border: none;
+  color: var(--brown100);
+  width: 100%; /* Đảm bảo dropdown button rộng */
+  height: 100%; /* Đảm bảo chiều cao */
+  padding: 0 15px;
+  /* font-weight: bold; */
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.filter-order__status .dropdown-menu {
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px 0px var(--shadow);
+  font-size: 1.6rem;
+  padding: 10px 0;
+}
+
+.filter-order__status .dropdown-item {
+  padding: 8px 15px;
+  color: var(--brown100);
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.filter-order__status .dropdown-item:hover,
+.filter-order__status .dropdown-item:focus {
+  background-color: var(--brown100);
+  color: var(--white);
+}
