--- a/src/components/SearchBoxComponent/SearchBoxComponent.module.css
+++ b/src/components/SearchBoxComponent/SearchBoxComponent.module.css
@@ -1,6 +1,6 @@
 .search__component {
   width: var(--search-box-width);
-  height: var(--search-box-height);
+  height: 4.4rem;
   border-radius: 50px;
   background: #d9d9d900;
   border: none;
