--- a/src/pages/User/UserInfoPage/UserInfoPage.css
+++ b/src/pages/User/UserInfoPage/UserInfoPage.css
@@ -52,8 +52,8 @@ label {
 .user-info {
   width: 100%;
   border-radius: 15px;
-  box-shadow: 0px 0px 4px 0px var(--shadow);
-  padding: 20px;
+  /* box-shadow: 0px 0px 4px 0px var(--shadow); */
+  padding: 0 20px;
 }
 
 .form-row {
