--- a/src/components/SideMenuComponent/SideMenuComponent.css
+++ b/src/components/SideMenuComponent/SideMenuComponent.css
@@ -39,7 +39,7 @@
   color: var(--brown100);
 }
 
-.active {
+.btn__component.active {
   background: var(--green30);
   border-radius: 10px;
   /* font-weight: bold; */
