--- a/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
+++ b/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
@@ -39,7 +39,7 @@
   color: var(--brown100);
 }
 
-.active .btn__component {
+.btn__component.active  {
   background: var(--green30);
   border-radius: 10px;
   color: var(--brown100); 
